<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">DND HP</string>
    <string name="packageName">com.admteal.dndhp</string>
    
	<!-- Strings for the XML layouts -->
	
    <string name="Clear">C</string>
    <string name="ExtendedRest">ER</string>
    <string name="Undo">U</string>
    <string name="regen">Regen</string>
    <string name="ongoing">Ongoing</string>
    <string name="surges">Surges</string>
    <string name="ds">Death Saves</string>
    <string name="hs">HS</string>
    <string name="default_player">Default</string>
    <string name="custom_player">Custom</string>
    <string name="set_healing_surge">Set HS</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="THP">THP</string>
    <string name="Add">+</string>
    <string name="Subtract">-</string>
    
    <!-- String literals for use in the java -->
    
    <string name="minus">minus</string>
    <string name="plus">plus</string>
    <string name="blank"></string>
    <string name="colonspace">:</string>
    <string name="input">input</string>
    <string name="YES">Yes</string>
    <string name="NO">No</string>
    <string name="CURRENT_HP">CURRENT HP</string>
    
    <!-- Status effect toggles.  Tabbed values are unused -->
    
    <string name="Blinded">BLND</string>
    <string name="Dazed">DAZE</string>
    	<string name="Deafened">DEAF</string>
    <string name="Dominated">DOMI</string>
    	<string name="Dying">DYIG</string>
    <string name="Grabbed">GRAB</string>
    	<string name="Helpless">HELP</string>
    	<string name="Immobile">IMMO</string>
    <string name="Marked">MARK</string>
    	<string name="Petrified">PETR</string>
    <string name="Prone">PRON</string>
    	<string name="Restrained">REST</string>
    <string name="Stunned">STUN</string>
    	<string name="Unconscious">UNCO</string>
    <string name="Weakened">WEAK</string>
    
    <!-- New Custom Player dialog strings -->
    <string name="newMaxHP">Max HP*: </string>
    <string name="newCurrentHP">Current HP: </string>
    <string name="newMaxSurges">Max Surges*: </string>
    <string name="newCurrentSurges">Current Surges: </string>
    <string name="newHS">Surge Value: </string>
    <string name="savePlayer">Save Player</string>
    <string name="abandonPlayer">Abandon Player</string>
    <string name="starsNecessary">Values marked with a * are necessary.</string>
    
    <!--  Toasts -->
    
    <string name="TOAST_couldNotMakePlayer">Necessary values were blank, so a new custom player could not be made.</string>
    <string name="TOAST_madeFullHPPlayer">Made a new player at full HP</string>
    <string name="TOAST_madePartialHPPlayer">Made a new player at partial HP</string>
    <string name="TOAST_madeDefaultPlayer">Set current player to default</string>
    <string name="TOAST_HSWasZero">Current entry was 0.  Setting healing surge value to 0.</string>
    
    <!-- Dialogs -->
    
    <string name="DIALOG_CUSTOM_PLAYER_title">What stats should the new player have?</string>
    <string name="DIALOG_EXTENDED_REST_msg">Take an extended rest?</string>

</resources>