<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <!-- Left Main Column -->

    <RelativeLayout
        android:id="@+id/displaysLayout"
        android:layout_width="64dp"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/currentHPView"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center" />
        
        <TextView
            android:id="@+id/currentTHPView"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/currentHPView"
            android:layout_centerHorizontal="true"
            android:gravity="center" />

        <ScrollView
            android:id="@+id/showWorkScroller"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/currentEntryView"
            android:layout_below="@+id/currentTHPView"
            android:layout_centerHorizontal="true"
            android:fillViewport="true" >

            <LinearLayout
                android:id="@+id/showWorkLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>

        <TextView
            android:id="@+id/currentEntryView"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center" />
    </RelativeLayout>

    <!-- Right Main Column -->

    <LinearLayout
        android:id="@+id/rightMainColumn"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:baselineAligned="false"
        android:orientation="vertical" >

        <!-- Top Right Toggles -->

        <TableLayout
            android:id="@+id/togglesLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*" >

            <TableRow>

                <ToggleButton
                    android:id="@+id/toggleBlinded"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:textOff="@string/Blinded"
                    android:textOn="@string/Blinded" />

                <ToggleButton
                    android:id="@+id/toggleDazed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOff="@string/Dazed"
                    android:textOn="@string/Dazed" />

                <ToggleButton
                    android:id="@+id/toggleDominated"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:textOff="@string/Dominated"
                    android:textOn="@string/Dominated" />

                <ToggleButton
                    android:id="@+id/toggleGrabbed"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:textOff="@string/Grabbed"
                    android:textOn="@string/Grabbed" />
            </TableRow>

            <TableRow>

                <ToggleButton
                    android:id="@+id/toggleMarked"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:textOff="@string/Marked"
                    android:textOn="@string/Marked" />

                <ToggleButton
                    android:id="@+id/toggleProne"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:textOff="@string/Prone"
                    android:textOn="@string/Prone" />

                <ToggleButton
                    android:id="@+id/toggleStunned"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:textOff="@string/Stunned"
                    android:textOn="@string/Stunned" />

                <ToggleButton
                    android:id="@+id/toggleWeakened"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:textOff="@string/Weakened"
                    android:textOn="@string/Weakened" />
            </TableRow>
        </TableLayout>

        <!-- Center Right Tracker Buttons -->

        <RelativeLayout
            android:id="@+id/trackersLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- Death Saves -->

            <Button
                android:id="@+id/DSSub"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="-" />

            <Button
                android:id="@+id/inputDS"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/DSAdd"
                android:layout_toRightOf="@+id/DSSub" />

            <Button
                android:id="@+id/DSAdd"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="+" />

            <!-- Healing Surges -->

            <Button
                android:id="@+id/surgesSub"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/DSSub"
                android:text="-" />

            <Button
                android:id="@+id/inputSurges"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_below="@+id/inputDS"
                android:layout_toLeftOf="@+id/surgesAdd"
                android:layout_toRightOf="@+id/surgesSub" />

            <Button
                android:id="@+id/surgesAdd"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/DSAdd"
                android:text="+" />

            <!-- Ongoing/Regeneration -->

            <Button
                android:id="@+id/ongoSub"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/surgesSub"
                android:text="-" />

            <Button
                android:id="@+id/inputOngo"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_below="@+id/inputSurges"
                android:layout_toLeftOf="@+id/ongoAdd"
                android:layout_toRightOf="@+id/ongoSub" />

            <Button
                android:id="@+id/ongoAdd"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/surgesAdd"
                android:text="+" />
        </RelativeLayout>

        <!-- Calculator Buttons -->

        <LinearLayout
            android:id="@+id/calculatorLayout"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="2"
            android:baselineAligned="false"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/calculatorLeftSideLayout"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/inputClear"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/Clear" />
            </LinearLayout>

            <TableLayout
                android:id="@+id/calculatorNumbersLayout"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="3" >

                <TableRow android:layout_weight="1" >

                    <Button
                        android:id="@+id/input1"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:text="1" />

                    <Button
                        android:id="@+id/input2"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:text="2" />

                    <Button
                        android:id="@+id/input3"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:text="3" />
                </TableRow>

                <TableRow android:layout_weight="1" >

                    <Button
                        android:id="@+id/input4"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:text="4" />

                    <Button
                        android:id="@+id/input5"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:text="5" />

                    <Button
                        android:id="@+id/input6"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:text="6" />
                </TableRow>

                <TableRow android:layout_weight="1" >

                    <Button
                        android:id="@+id/input7"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:text="7" />

                    <Button
                        android:id="@+id/input8"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:text="8" />

                    <Button
                        android:id="@+id/input9"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:text="9" />
                </TableRow>

                <TableRow android:layout_weight="1" >

                    <Button
                        android:id="@+id/input0"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:text="0" />

                    <Button
                        android:id="@+id/inputHS"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_span="2"
                        android:layout_weight="2" />
                </TableRow>
            </TableLayout>

            <LinearLayout
                android:id="@+id/calculatorRightSideLayout"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/inputTHP"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/THP" />
                
                <Button
                    android:id="@+id/inputAdd"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="+" />

                <Button
                    android:id="@+id/inputSub"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="-" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>